--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "start:dev": "nodemon ./server/index.js",
     "build": "webpack --config webpack.config.js --watch",
     "connect": "mysql -u root",
-    "seed": "node ./database/seed.js"
+    "seed:MySQL": "node ./database/seedMySQL.js"
   },
   "repository": {
     "type": "git",
@@ -22,13 +22,13 @@
   },
   "homepage": "https://github.com/hrr43-fec6-rey/photo-gallery-service#readme",
   "dependencies": {
-    "artillery": "^1.6.0-29",
     "axios": "^0.19.2",
     "babel-loader": "^8.0.6",
     "cors": "^2.8.5",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "express": "^4.17.1",
+    "mongodb": "^3.5.3",
     "morgan": "^1.9.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.2",
