--- a/package.json
+++ b/package.json
@@ -25,13 +25,16 @@
     "axios": "^0.19.2",
     "babel-loader": "^8.0.6",
     "cors": "^2.8.5",
+    "csv-parser": "^2.3.2",
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "express": "^4.17.1",
+    "json2csv": "^4.5.4",
     "mongodb": "^3.5.3",
     "morgan": "^1.9.1",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.2",
+    "pg": "^7.18.1",
     "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
@@ -45,7 +48,6 @@
     "@babel/preset-react": "^7.8.3",
     "babel-jest": "^25.1.0",
     "css-loader": "^3.4.2",
-    "csv-writer": "^1.6.0",
     "eslint": "^6.1.0",
     "eslint-config-airbnb": "^18.0.1",
     "eslint-plugin-import": "^2.20.0",
