--- a/package.json
+++ b/package.json
@@ -29,10 +29,10 @@
     "enzyme": "^3.11.0",
     "enzyme-adapter-react-16": "^1.15.2",
     "express": "^4.17.1",
-    "json2csv": "^4.5.4",
     "mongodb": "^3.5.3",
     "morgan": "^1.9.1",
     "mysql": "^2.18.1",
+    "newrelic": "^6.4.1",
     "nodemon": "^2.0.2",
     "pg": "^7.18.1",
     "prop-types": "^15.7.2",
